@@ -1,3 +1,4 @@
+0.92.6-0 @03/01/2005 23:25:00 UTC@
 0.92.5-0 @02/22/2005 19:45:00 UTC@
 0.92.4-0 @02/17/2005 23:15:00 UTC@
 0.92.3-0 @02/15/2005 22:10:00 UTC@
